@startuml
skinparam classAttributeIconSize 0
left to right direction

class Company {
    -designation
    -getVaccineTypeStore()
}

class VaccineType {
    -code
    -description
    -technology
    +VaccineType(code, description, technology)
    -checkCodeRules(code)
    -checkDescriptionRules(description)
    +toString()
}

class SpecifyNewVaccineTypeUI {
}

class SpecifyNewVaccineTypeController {
    +createVaccineType(code, description, technology)
    +saveVaccineType()
}

class VaccineTypeStore {
    +createVaccineType(code, description, technology)
    +validateVaccineType(vt)
    +saveVaccineType(vt)
    -addVaccineType(vt)
}

Company "1" --> "*" VaccineType : promotes administration >
Company "1" --> "1" VaccineTypeStore : uses >
SpecifyNewVaccineTypeController ..> Company
SpecifyNewVaccineTypeController ..> VaccineType
SpecifyNewVaccineTypeController ..> VaccineTypeStore
SpecifyNewVaccineTypeUI ..> SpecifyNewVaccineTypeController

@enduml